<resources>
    <string name="app_name">SuperApp Mi Bolsillo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_domicilio">Mi Domicilio</string>
    <string name="menu_empleos">Mi Empleo</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_registroClientes">Mi Perfil</string>
    <string name="menu_send">Send</string>
    <string name="menu_ChatBot">ChatBot</string>
    <string name="menu_ReferenciasPersonales">Referencias Personales</string>
    <string name="menu_terminos">Terminos y condiciones</string>
    <string name="menu_cerrar">Cerrar Aplicacion</string>
    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Estados</string>
    <string name="title_oportunidades">Oportunidades</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_ayuda">Ayuda</string>
    <string name="title_negocio">Negocio</string>
    <string name="title_referencias">Referencias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Escribe tu correo</string>
    <string name="prompt_password">Escribe tu contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_registro">Registro</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login Incorrecto"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="invalid_email">Correo Invalido</string>
    <string name="desc_password_toggle">\tpassword</string>
    <string name="show_password">mostrar contraseña</string>



    <string-array name="recargas">
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
    </string-array>

    <string-array name="tarjetaderegalo">
        <item>300</item>
        <item>500</item>
    </string-array>

    <string-array name="pagoservicio">
        <item>Codigo de Barras</item>
        <item>Numero de Cuenta</item>
    </string-array>

    <string-array name="bitcoins">
        <item>0.1 Bitcoin</item>
        <item>0.2 Bitcoin</item>
        <item>0.3 Bitcoin</item>
        <item>0.4 Bitcoin</item>
        <item>0.5 Bitcoin</item>
        <item>0.6 Bitcoin</item>
        <item>0.7 Bitcoin</item>
        <item>0.8 Bitcoin</item>
        <item>0.9 Bitcoin</item>
        <item>1 Bitcoin</item>
        <item>1.1 Bitcoin</item>
        <item>1.2 Bitcoin</item>
        <item>1.3 Bitcoin</item>
        <item>1.4 Bitcoin</item>
    </string-array>
</resources>
