<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/bottom_estadosfinancieros"
        android:icon="@drawable/baseline_account_balance_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/bottom_chat"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/bottom_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/bottom_ayuda"
        android:icon="@drawable/baseline_live_help_24"
        android:title="@string/title_ayuda" />



</menu>
